--- a/public/plugins/wechat/view/index.html
+++ b/public/plugins/wechat/view/index.html
@@ -24,31 +24,9 @@
 </head>
 <body>
 <div class="well well-warning" style="display: inline-block;">
-    <h2>ThinkCMF插件演示 by yibin</h2>
-    {:lang('plugin_demo_hello_world')}
-    <p>
-        <b>插件根目录:</b>__PLUGIN_ROOT__
-    </p>
-
-    <p>
-        <b>插件模板根目录:</b>__PLUGIN_TMPL__
-    </p>
-
-    <p>
-        <b>生成插件控制器 URL:</b>{:cmf_plugin_url('Demo://Index/index',['id'=>1])}
-    </p>
-
-    <p>
-        <b>foreach:</b>
-    </p>
-    <ol>
-        <foreach name="users" item="vo">
-            <li>{$vo.user_login} {:date('Y-m-d H:i:s',$vo['create_time'])}</li>
-
-        </foreach>
-    </ol>
-
-
+    用 户 名：<input type="text"><br/>
+	密    码：<input type="password"><br/>
+	重复密码：<input type="password"><br/>
 </div>
 </body>
 </html>
