--- a/public/plugins/wechat/view/index.html
+++ b/public/plugins/wechat/view/index.html
@@ -24,9 +24,10 @@
 </head>
 <body>
 <div class="well well-warning" style="display: inline-block;">
-    用 户 名：<input type="text"><br/>
-	密    码：<input type="password"><br/>
-	重复密码：<input type="password"><br/>
+    用户名：<input type="text"><br/>
+	  密码：<input type="password"><br/>
+  重复密码：<input type="password"><br/><br/><br/>
+  <input type="submit">
 </div>
 </body>
 </html>
