--- a/public/plugins/wechat/view/index.html
+++ b/public/plugins/wechat/view/index.html
@@ -1,33 +1,84 @@
-<!doctype html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="ThinkCMF插件演示首页">
-    <meta name="keywords" content="ThinkCMF插件演示首页">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>ThinkCMF插件演示首页</title>
-
-    <!-- Set render engine for 360 browser -->
-    <meta name="renderer" content="webkit">
-
-    <!-- No Baidu Siteapp-->
-    <meta http-equiv="Cache-Control" content="no-siteapp"/>
-
-    <link rel="shortcut icon" href="__PLUGIN_TMPL__/assets/images/favicon.ico" type="image/x-icon">
-
-    <!-- SEO: If your mobile URL is different from the desktop URL, add a canonical link to the desktop page https://developers.google.com/webmasters/smartphone-sites/feature-phones -->
-    <!--
-    <link rel="canonical" href="http://www.example.com/">
-    -->
-
+    <meta charset="UTF-8"/>
+    <title>ThinkCMF {:lang('ADMIN_CENTER')}</title>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1,IE=edge"/>
+    <meta name="renderer" content="webkit|ie-comp|ie-stand">
+    <meta name="robots" content="noindex,nofollow">
+    <!-- HTML5 shim for IE8 support of HTML5 elements -->
+    <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+    <![endif]-->
+    <link href="__ADMIN_TMPL__/public/assets/themes/{:cmf_get_admin_style()}/bootstrap.min.css" rel="stylesheet">
+    <link href="__STATIC__/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="__ADMIN_TMPL__/public/assets/themes/{:cmf_get_admin_style()}/login.css" rel="stylesheet">
+    <script>
+        if (window.parent !== window.self) {
+            document.write              = '';
+            window.parent.location.href = window.self.location.href;
+            setTimeout(function () {
+                document.body.innerHTML = '';
+            }, 0);
+        }
+    </script>
 </head>
 <body>
-<div class="well well-warning" style="display: inline-block;">
-    用户名：<input type="text"><br/>
-	  密码：<input type="password"><br/>
-  重复密码：<input type="password"><br/><br/><br/>
-  <input type="submit">
+<div class="wrap">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4 col-md-offset-4">
+                <h1 class="text-center">ThinkCMF</h1>
+                <form class="js-ajax-form" action="{:url('admin/Public/doLogin')}" method="post">
+                    <div class="form-group">
+                        <input type="text" id="input_username" class="form-control" name="username"
+                               placeholder="{:lang('USERNAME_OR_EMAIL')}" title="{:lang('USERNAME_OR_EMAIL')}"
+                               value="{:cookie('admin_username')}" data-rule-required="true" data-msg-required="">
+                    </div>
+
+                    <div class="form-group">
+                        <input type="password" id="input_password" class="form-control" name="password"
+                               placeholder="{:lang('PASSWORD')}" title="{:lang('PASSWORD')}" data-rule-required="true"
+                               data-msg-required="">
+                    </div>
+
+                    <div class="form-group">
+                        <div style="position: relative;">
+                            <input type="text" name="captcha" placeholder="验证码" class="form-control captcha">
+                            <captcha height="32" width="150" font-size="18"
+                                     style="cursor: pointer;position:absolute;right:1px;top:1px;"/>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <input type="hidden" name="redirect" value="">
+                        <button class="btn btn-primary btn-block js-ajax-submit" type="submit" style="margin-left: 0px"
+                                data-loadingmsg="{:lang('LOADING')}">
+                            {:lang('LOGIN')}
+                        </button>
+                    </div>
+
+                </form>
+            </div>
+        </div>
+
+    </div>
 </div>
+<script type="text/javascript">
+    //全局变量
+    var GV = {
+        ROOT: "__ROOT__/",
+        WEB_ROOT: "__WEB_ROOT__/",
+        JS_ROOT: "static/js/",
+        APP: ''/*当前应用名*/
+    };
+</script>
+<script src="__STATIC__/js/jquery.js"></script>
+<script src="__STATIC__/js/wind.js"></script>
+<script src="__STATIC__/js/admin.js"></script>
+<script>
+    (function () {
+        document.getElementById('input_username').focus();
+    })();
+</script>
 </body>
 </html>
