--- a/public/plugins/wechat/view/register.html
+++ b/public/plugins/wechat/view/register.html
@@ -42,7 +42,7 @@
                                         <a class="btn btn-success js-get-mobile-code"
                                            style="width: 163px;position: absolute;top:0;right: 0;"
                                            data-wait-msg="[second]秒后才能再次获取" data-mobile-input="#js-mobile-input"
-                                           data-url="{:url('user/VerificationCode/send')}"
+                                           data-url="{:cmf_plugin_url('Wechat://Index/send)}"
                                            data-init-second-left="60">获取手机验证码</a>
                                     </div>
                                 </div>
