--- a/public/plugins/wechat/view/register.html
+++ b/public/plugins/wechat/view/register.html
@@ -5,9 +5,9 @@
     <meta name="keywords" content=""/>
     <meta name="description" content="">
 </head>
-<include file="public@head" />
+<include file="/public@head" />
 <body class="body-white">
-<include file="public@nav" />
+<include file="/public@nav" />
 <div class="container tc-main">
     <div class="row">
         <div class="col-md-4 col-md-offset-4">
