--- a/public/plugins/wechat/view/register.html
+++ b/public/plugins/wechat/view/register.html
@@ -5,9 +5,9 @@
     <meta name="keywords" content=""/>
     <meta name="description" content="">
 </head>
-<include file="/public/themes/simpleboot3/public/head.html" />
+
 <body class="body-white">
-<include file="public@nav" />
+
 <div class="container tc-main">
     <div class="row">
         <div class="col-md-4 col-md-offset-4">
@@ -72,6 +72,17 @@
 
 </div>
 <!-- /container -->
-<include file="public@scripts"/>
+<script type="text/javascript">
+    //全局变量
+    var GV = {
+        ROOT: "__ROOT__/",
+        WEB_ROOT: "__WEB_ROOT__/",
+        JS_ROOT: "static/js/",
+        APP: ''/*当前应用名*/
+    };
+</script>
+<script src="__STATIC__/js/jquery.js"></script>
+<script src="__STATIC__/js/wind.js"></script>
+<script src="__STATIC__/js/admin.js"></script>
 </body>
 </html>
