--- a/public/plugins/wechat/view/register.html
+++ b/public/plugins/wechat/view/register.html
@@ -78,7 +78,7 @@
             </php>
 
             <div class="tab-content">
-				<div class="tab-pane {$mobile_tab_active}" id="mobile">
+				<div class="tab-pane " id="mobile">
 					<form class="js-ajax-form" action="{:cmf_plugin_url('Wechat://Index/doRegister')}" method="post">
 
 						<div class="form-group">
