--- a/public/plugins/wechat/view/register.html
+++ b/public/plugins/wechat/view/register.html
@@ -70,10 +70,15 @@
     <div class="row">
         <div class="col-md-4 col-md-offset-4">
             <h2 class="text-center">用户注册</h2>
-            
+            <php>                  $mobile_tab_active=empty($theme_vars['enable_mobile'])?'':'active';
+            </php>
+
+            <php>
+                $is_open_registration = cmf_is_open_registration();
+            </php>
 
             <div class="tab-content">
-				<div class="tab-pane " id="mobile">
+				<div class="tab-pane active" id="mobile">
 					<form class="js-ajax-form" action="{:cmf_plugin_url('Wechat://Index/doRegister')}" method="post">
 
 						<div class="form-group">
