--- a/public/plugins/wechat/view/register.html
+++ b/public/plugins/wechat/view/register.html
@@ -130,6 +130,7 @@
 
 </div>
 <!-- /container -->
-
+<script src="/classManage/public/themes/simpleboot3/public/assets/simpleboot3/bootstrap/js/bootstrap.min.js"></script>
+<script src="/classManage/public/static/js/frontend.js"></script>
 </body>
 </html>
