--- a/public/plugins/wechat/view/register.html
+++ b/public/plugins/wechat/view/register.html
@@ -21,8 +21,7 @@
 <!--[if lt IE 9]>
 <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
 <![endif]-->
-<link rel="icon" href="/classManage/public/themes/simpleboot3/public/assets/images/favicon.png" type="image/png">
-<link rel="shortcut icon" href="/classManage/public/themes/simpleboot3/public/assets/images/favicon.png" type="image/png">
+
 <link href="/classManage/public/themes/simpleboot3/public/assets/simpleboot3/themes/simpleboot3/bootstrap.min.css" rel="stylesheet">
 <link href="/classManage/public/themes/simpleboot3/public/assets/simpleboot3/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet"
       type="text/css">
@@ -70,15 +69,8 @@
     <div class="row">
         <div class="col-md-4 col-md-offset-4">
             <h2 class="text-center">用户注册</h2>
-            <php>                  $mobile_tab_active=empty($theme_vars['enable_mobile'])?'':'active';
-            </php>
-
-            <php>
-                $is_open_registration = cmf_is_open_registration();
-            </php>
-
             <div class="tab-content">
-				<div class="tab-pane active" id="mobile">
+				<div id="mobile">
 					<form class="js-ajax-form" action="{:cmf_plugin_url('Wechat://Index/doRegister')}" method="post">
 
 						<div class="form-group">
