--- a/public/plugins/wechat/view/find_password.html
+++ b/public/plugins/wechat/view/find_password.html
@@ -4,19 +4,19 @@
     <title></title>
     <meta name="keywords" content=""/>
     <meta name="description" content="">
+    <include file="head"/>
 </head>
-
-<include file="head"/>
 
 <body class="body-white">
 
 <div class="container tc-main">
     <div class="row">
         <div class="col-md-4 col-md-offset-4">
-            <h2 class="text-center">用户注册</h2>
+            <h2 class="text-center">忘记密码</h2>
+            
             <div class="tab-content">
 				<div id="mobile">
-					<form class="js-ajax-form" action="{:cmf_plugin_url('Wechat://Index/doRegister')}" method="post">
+					<form class="js-ajax-form" action="{:cmf_plugin_url('Wechat://Index/passwordReset')}" method="post">
 
 						<div class="form-group">
 							<input type="text" name="username" placeholder="手机号" class="form-control"
@@ -25,18 +25,17 @@
 
 						<div class="form-group">
 							<div style="position: relative;">
-								<input type="text" name="code" placeholder="手机验证码" style="width:170px;"
+								<input type="text" name="verification_code" placeholder="手机验证码" style="width:170px;"
 									   class="form-control">
 								<a class="btn btn-success js-get-mobile-code"
 								   style="width: 163px;position: absolute;top:0;right: 0;"
 								   data-wait-msg="[second]秒后才能再次获取" data-mobile-input="#js-mobile-input"
-								   data-url="{:cmf_plugin_url('Wechat://Index/send')}"
-								   data-init-second-left="60">获取手机验证码</a>
+								   data-url="{:cmf_plugin_url('Wechat://Index/send')}">获取手机验证码</a>
 							</div>
 						</div>
 
 						<div class="form-group">
-							<input type="password" name="password" placeholder="密码" class="form-control">
+							<input type="password" name="password" placeholder="请重置新密码" class="form-control">
 						</div>
 
 						<div class="form-group">
@@ -49,24 +48,25 @@
 
 						<div class="form-group">
 							<button class="btn btn-primary btn-block js-ajax-submit" type="submit" data-wait="1500"
-									style="margin-left: 0px;">确定注册
+									style="margin-left: 0px;">确定
 							</button>
 						</div>
 
 						<div class="form-group" style="text-align: center;">
-							<p>
-								已有账号? <a href="{:cmf_plugin_url('Wechat://Index/login')}">点击此处登录</a>
-							</p>
+							<ul class="list-inline">
+								<li><a href="{:cmf_plugin_url('Wechat://Index/register')}">现在注册</a></li>
+								<li><a href="{:cmf_plugin_url('Wechat://Index/login')}">现在登录</a></li>
+							</ul>
 						</div>
 					</form>
 				</div>
-            </div>
 
+            </div>
         </div>
     </div>
-
 </div>
 <!-- /container -->
+
 <include file="scripts"/>
 </body>
 </html>
