--- a/public/plugins/wechat/view/login.html
+++ b/public/plugins/wechat/view/login.html
@@ -6,60 +6,7 @@
 <meta name="description" content="">
 </head>
 
-<meta name="author" content="ThinkCMF">
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-
-<!-- Set render engine for 360 browser -->
-<meta name="renderer" content="webkit">
-
-<!-- No Baidu Siteapp-->
-<meta http-equiv="Cache-Control" content="no-siteapp"/>
-
-<!-- HTML5 shim for IE8 support of HTML5 elements -->
-<!--[if lt IE 9]>
-<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-<![endif]-->
-
-<link href="/classManage/public/themes/simpleboot3/public/assets/simpleboot3/themes/simpleboot3/bootstrap.min.css" rel="stylesheet">
-<link href="/classManage/public/themes/simpleboot3/public/assets/simpleboot3/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet"
-      type="text/css">
-<!--[if IE 7]>
-<link rel="stylesheet" href="/classManage/public/themes/simpleboot3/public/assets/simpleboot3/font-awesome/4.4.0/css/font-awesome-ie7.min.css">
-<![endif]-->
-<link href="/classManage/public/themes/simpleboot3/public/assets/css/style.css" rel="stylesheet">
-<style>
-    /*html{filter:progid:DXImageTransform.Microsoft.BasicImage(grayscale=1);-webkit-filter: grayscale(1);}*/
-    #backtotop {
-        position: fixed;
-        bottom: 50px;
-        right: 20px;
-        display: none;
-        cursor: pointer;
-        font-size: 50px;
-        z-index: 9999;
-    }
-
-    #backtotop:hover {
-        color: #333
-    }
-
-    #main-menu-user li.user {
-        display: none
-    }
-</style>
-<script type="text/javascript">
-    //全局变量
-    var GV = {
-        ROOT: "__ROOT__/",
-        WEB_ROOT: "__WEB_ROOT__/",
-        JS_ROOT: "static/js/"
-    };
-</script>
-<script src="/classManage/public/themes/simpleboot3/public/assets/js/jquery-1.10.2.min.js"></script>
-<script src="/classManage/public/themes/simpleboot3/public/assets/js/jquery-migrate-1.2.1.js"></script>
-<script src="__STATIC__/js/wind.js"></script>
+<include file="head"/>
 
 <body class="body-white">
 	<div class="container tc-main">
@@ -90,7 +37,7 @@
 					<div class="form-group" style="text-align: center;">
 						<ul class="list-inline">
 							<li><a href="{:cmf_plugin_url('Wechat://Index/register')}">现在注册</a></li>
-							<li><a href="{:cmf_url('user/Login/findPassword')}">忘记密码</a></li>
+							<li><a href="{:cmf_plugin_url('Wechat://Index/findPassword')}">忘记密码</a></li>
 						</ul>
 					</div>
 				</form>
@@ -98,10 +45,6 @@
 		</div>
 	</div>
 	<!-- /container -->
-	<!-- Le javascript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="/classManage/public/themes/simpleboot3/public/assets/simpleboot3/bootstrap/js/bootstrap.min.js"></script>
-    <script src="/classManage/public/static/js/frontend.js"></script>
+    <include file="scripts"/>
 </body>
 </html>
