测试注册和登录及找回密码模板

--- a/public/plugins/wechat/view/login.html
+++ b/public/plugins/wechat/view/login.html
@@ -9,7 +9,7 @@
 <include file="head"/>
 
 <body class="body-white">
-	<div class="container tc-main">
+	<div class="container">
 		<div class="row">
 			<div class="col-md-4 col-md-offset-4">
 				<h2 class="text-center">用户登录</h2>
