--- a/public/plugins/wechat/view/register.html
+++ b/public/plugins/wechat/view/register.html
@@ -10,7 +10,7 @@
 
 <body class="body-white">
 
-<div class="container tc-main">
+<div class="container">
     <div class="row">
         <div class="col-md-4 col-md-offset-4">
             <h2 class="text-center">用户注册</h2>
