更改增加相应控制器index和game模板目录后的路径代码

--- a/public/plugins/wechat/view/index/find_password.html
+++ b/public/plugins/wechat/view/index/find_password.html
@@ -4,7 +4,7 @@
     <title></title>
     <meta name="keywords" content=""/>
     <meta name="description" content="">
-    <include file="head"/>
+    <include file="index/head"/>
 </head>
 
 <body class="body-white">
@@ -67,6 +67,6 @@
 </div>
 <!-- /container -->
 
-<include file="scripts"/>
+<include file="index/scripts"/>
 </body>
 </html>
