--- a/public/plugins/wechat/view/index/login.html
+++ b/public/plugins/wechat/view/index/login.html
@@ -6,7 +6,7 @@
 <meta name="description" content="">
 </head>
 
-<include file="head"/>
+<include file="index/head"/>
 
 <body class="body-white">
 	<div class="container">
@@ -45,6 +45,6 @@
 		</div>
 	</div>
 	<!-- /container -->
-    <include file="scripts"/>
+    <include file="index/scripts"/>
 </body>
 </html>
