--- a/public/plugins/wechat/view/index/register.html
+++ b/public/plugins/wechat/view/index/register.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
 </head>
 
-<include file="head"/>
+<include file="index/head"/>
 
 <body class="body-white">
 
@@ -67,6 +67,6 @@
 
 </div>
 <!-- /container -->
-<include file="scripts"/>
+<include file="index/scripts"/>
 </body>
 </html>
