--- a/public/plugins/wechat/view/game/gameList.html
+++ b/public/plugins/wechat/view/game/gameList.html
@@ -6,7 +6,7 @@
 </head>
 
    <h2><a href="{:cmf_plugin_url('Wechat://Game/index')}">ÓÎÏ·ÁÐ±í</a></h2>
-   <p><a href="{:cmf_plugin_url('Wechat://Game/chooseGame','pokeGame')}">·­ÅÆÓÎÏ·</a></p>
-   <p><a href="{:cmf_plugin_url('Wechat://Game/chooseGame','detectColor')}">±æÉ«ÓÎÏ·</a></p>
+   <p><a href="{:cmf_plugin_url('Wechat://Game/chooseGame',array('name'=>'pokeGame'))}">·­ÅÆÓÎÏ·</a></p>
+   <p><a href="{:cmf_plugin_url('Wechat://Game/chooseGame',array('name'=>'detectColor'))}">±æÉ«ÓÎÏ·</a></p>
 
 </html>
