--- a/public/plugins/wechat/view/game/gameList.html
+++ b/public/plugins/wechat/view/game/gameList.html
@@ -5,8 +5,8 @@
     <meta name="description" content="">
 </head>
 
-   <h2><a href="{:cmf_plugin_url('Wechat://Game/index')}">游戏列表</a></h2>
-   <p><a href="{:cmf_plugin_url('Wechat://Game/chooseGame',array('name'=>'pokeGame'))}">翻牌游戏</a></p>
-   <p><a href="{:cmf_plugin_url('Wechat://Game/chooseGame',array('name'=>'detectColor'))}">辨色游戏</a></p>
+   <h2><a href="{:cmf_plugin_url('Wechat://Game/index')}">娓告垙鍒楄〃</a></h2>
+   <p><a href="{:cmf_plugin_url('Wechat://Game/chooseGame',array('name'=>'pokeGame'))}">缈荤墝娓告垙</a></p>
+   <p><a href="{:cmf_plugin_url('Wechat://Game/chooseGame',array('name'=>'detectColor'))}">杈ㄨ壊娓告垙</a></p>
 
 </html>
