--- a/public/plugins/wechat/view/game/pokeGame/index.html
+++ b/public/plugins/wechat/view/game/pokeGame/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0"/>
 <title>扑克牌记忆力游戏</title>
-<link href="./public/assets/styles/matchgame.css" rel="stylesheet">
+<link href="/classManage/public/plugins/wechat/view/game/pokeGame/public/assets/styles/matchgame.css" rel="stylesheet">
 </head>
 <body>
 
@@ -12,8 +12,8 @@
 <p style="font-weight:bold;color:#096;">作者:2014030403080 ~~~ 郑实斌</p>
 </div>
 
-<script type="text/javascript" src="./public/assets/scripts/game.js"></script>
-<script type="text/javascript" src="./public/assets/scripts/jquery-1.11.1.min.js"></script>
+<script type="text/javascript" src="/classManage/public/plugins/wechat/view/game/pokeGame/public/assets/scripts/game.js"></script>
+<script type="text/javascript" src="/classManage/public/plugins/wechat/view/game/pokeGame/public/assets/scripts/jquery-1.11.1.min.js"></script>
 
 <section id="game">
    <div id="cards">
