--- a/public/plugins/wechat/view/game/gameList.html
+++ b/public/plugins/wechat/view/game/gameList.html
@@ -6,7 +6,7 @@
 </head>
 
    <h2><a href="{:cmf_plugin_url('Wechat://Game/index')}">游戏列表</a></h2>
-   <p><a href="{:cmf_plugin_url('Wechat://Game/chooseGame',array('name'=>'pokeGame'))}">翻牌游戏</a></p><!--,array('detectColor')-->
-   <p><a href="{:cmf_plugin_url('Wechat://Game/chooseGame')}">辨色游戏</a></p>
+   <p><a href="{:cmf_plugin_url('Wechat://Game/chooseGame',array('name'=>'pokeGame'))}">翻牌游戏</a></p>
+   <p><a href="{:cmf_plugin_url('Wechat://Game/chooseGame',array('detectColor'))}">辨色游戏</a></p>
 
 </html>
