--- a/public/plugins/wechat/view/index/index.html
+++ b/public/plugins/wechat/view/index/index.html
@@ -27,7 +27,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-4 col-md-offset-4">
-                <h1 class="text-center">ThinkCMF</h1>
+                <h1 class="text-center">ThinkCMF{$openid}</h1>
                 <form class="js-ajax-form" action="{:url('admin/Public/doLogin')}" method="post">
                     <div class="form-group">
                         <input type="text" id="input_username" class="form-control" name="username"
