--- a/public/plugins/wechat/view/index/index.html
+++ b/public/plugins/wechat/view/index/index.html
@@ -28,10 +28,10 @@
         <div class="row">
             <div class="col-md-4 col-md-offset-4">
                 <h1 class="text-center">ThinkCMF</h1>
-                <form action="{:cmf_plugin_url('Wechat://Index/index')}" enctype="multipart/form-data" method="post">
-				   <input type="file" name="file" /> <br> 
-				   <input type="submit" value="上传" /> 
-				</form> 
+                <input id="file-1" type="hidden" name="file_url" >
+				<input  id="file-1-name" type="text" name="file_name" title="图片名称">
+				<a id="file-1-preview" target="_blank">下载</a>
+				<a href="javascript:uploadOne('图片上传','#file-1','file');">上传</a> 
             </div>
         </div>
 
@@ -49,6 +49,7 @@
 <script src="__STATIC__/js/jquery.js"></script>
 <script src="__STATIC__/js/wind.js"></script>
 <script src="__STATIC__/js/admin.js"></script>
+<script src="__STATIC__/js/frontend.js"></script>
 <script>
     (function () {
         document.getElementById('input_username').focus();
