--- a/public/plugins/wechat/view/index/index.html
+++ b/public/plugins/wechat/view/index/index.html
@@ -27,7 +27,24 @@
     <div class="container">
         <div class="row">
             <div class="col-md-4 col-md-offset-4">
-                <h1 class="text-center">ThinkCMF{$openid}</h1>
+                <h1 class="text-center">ThinkCMF</h1>
+				<table col='2' row='4'>
+				   <th>
+				      <td>栏目</td><td>值</td>
+				   </th>
+				   <tr>
+				      <td>openid</td><td>{$openid}</td>
+				   </tr>
+				   <tr>
+				      <td>性别</td><td>{$sex}!=0?({$sex}==1?'男':'女'):'未知'</td>
+				   </tr>
+				   <tr>
+				      <td>头像</td><td><img src="{$headimgurl}"></td>
+				   </tr>
+				   <tr>
+				      <td>昵称</td><td>{$nickname}</td>
+				   </tr>
+				</table>
                 <input id="file-1" type="hidden" name="file_url" >
 				<input  id="file-1-name" type="text" name="file_name" title="图片名称">
 				<a id="file-1-preview" target="_blank">下载</a>
