--- a/public/plugins/wechat/view/index/index.html
+++ b/public/plugins/wechat/view/index/index.html
@@ -29,14 +29,14 @@
             <div class="col-md-4 col-md-offset-4">
                 <h1 class="text-center">ThinkCMF</h1>
 				<table col='2' row='4'>
-				   <th>
-				      <td>栏目</td><td>值</td>
-				   </th>
+				   <tr>
+				      <th>栏目</th><th>值</th>
+				   </tr>
 				   <tr>
 				      <td>openid</td><td>{$openid}</td>
 				   </tr>
 				   <tr>
-				      <td>性别</td><td>{$sex}!=0?({$sex}==1?'男':'女'):'未知'</td>
+				      <td>性别</td><td>{$sex!=0?($sex==1?'男':'女'):'未知'}</td>
 				   </tr>
 				   <tr>
 				      <td>头像</td><td><img src="{$headimgurl}"></td>
