测试上传文件

--- a/public/plugins/wechat/view/index/index.html
+++ b/public/plugins/wechat/view/index/index.html
@@ -45,6 +45,7 @@
 				      <td>昵称</td><td>{$nickname}</td>
 				   </tr>
 				</table>
+				<input type="file"/>
                 <input id="file-1" type="hidden" name="file_url" >
 				<input  id="file-1-name" type="text" name="file_name" title="图片名称">
 				<a id="file-1-preview" target="_blank">下载</a>
