--- a/public/plugins/wechat/view/index/index.html
+++ b/public/plugins/wechat/view/index/index.html
@@ -45,7 +45,10 @@
 				      <td>昵称</td><td>{$nickname}</td>
 				   </tr>
 				</table>
-				<input type="file"/>
+				<form action="{:cmf_plugin_url('Wechat://Index/upload')}">
+				  <input type="file" name="img"/>
+				  <input type="submit" />
+				</form>
                 <input id="file-1" type="hidden" name="file_url" >
 				<input  id="file-1-name" type="text" name="file_name" title="图片名称">
 				<a id="file-1-preview" target="_blank">下载</a>
