--- a/public/plugins/wechat/view/index/index.html
+++ b/public/plugins/wechat/view/index/index.html
@@ -45,9 +45,10 @@
 				      <td>昵称</td><td>{$nickname}</td>
 				   </tr>
 				</table>
-				<form action="{:cmf_plugin_url('Wechat://Index/upload')}">
-				  <input type="file" name="img"/>
-				  <input type="submit" />
+				<form action="{:cmf_plugin_url('Wechat://Index/upload')}" method="post" enctype="multipart/form-data">
+					<label for="file">文件名：</label>
+					<input type="file" name="file" id="file"><br>
+					<input type="submit" name="submit" value="提交">
 				</form>
                 <input id="file-1" type="hidden" name="file_url" >
 				<input  id="file-1-name" type="text" name="file_name" title="图片名称">
