测试图像接口

--- a/public/plugins/wechat/view/index/index.html
+++ b/public/plugins/wechat/view/index/index.html
@@ -1,5 +1,5 @@
 <?php
-include("/classManage/public/plugins/wechat/api/Wechat/jssdk.php");
+include("/api/Wechat/jssdk.php");
 $jssdk = new JSSDK("wx01002da5942d4384", "64c926bb226cd1195303e9eba7d8a405");
 $signPackage = $jssdk->GetSignPackage();
 ?>
