--- a/public/plugins/wechat/view/index/index.html
+++ b/public/plugins/wechat/view/index/index.html
@@ -1,10 +1,6 @@
-<?php
-include("/api/Wechat/jssdk.php");
-$jssdk = new JSSDK("wx01002da5942d4384", "64c926bb226cd1195303e9eba7d8a405");
-$signPackage = $jssdk->GetSignPackage();
-?>
 <html>
 <head>
+    <include file="/classManage/public/plugins/wechat/api/Wechat/jssdk.php" /> 
     <meta charset="UTF-8"/>
     <title>ThinkCMF {:lang('ADMIN_CENTER')}</title>
     <meta http-equiv="X-UA-Compatible" content="chrome=1,IE=edge"/>
@@ -83,6 +79,10 @@ $signPackage = $jssdk->GetSignPackage();
     })();
 </script>
 
+<?php
+$jssdk = new JSSDK("wx01002da5942d4384", "64c926bb226cd1195303e9eba7d8a405");
+$signPackage = $jssdk->GetSignPackage();
+?>
 <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
 <script>
   /*
