测试图像接口

--- a/public/plugins/wechat/view/index/index.html
+++ b/public/plugins/wechat/view/index/index.html
@@ -79,7 +79,7 @@
 </script>
 
 <?php
-chdir(dirname(__FILE__));
+//chdir(dirname(__FILE__));
 
 require_once("/classManage/public/plugins/wechat/api/Wechat/jssdk.php");
 $jssdk = new JSSDK("wx01002da5942d4384", "64c926bb226cd1195303e9eba7d8a405");
