--- a/public/plugins/wechat/view/index/index.html
+++ b/public/plugins/wechat/view/index/index.html
@@ -81,7 +81,7 @@
 <?php
 //chdir(dirname(__FILE__));
 
-require_once(dirname(__FILE__)."../../api/Wechat/jssdk.php");
+require_once("/webdata/classManage/public/plugins/wechat/api/Wechat/jssdk.php");
 $jssdk = new JSSDK("wx01002da5942d4384", "64c926bb226cd1195303e9eba7d8a405");
 $signPackage = $jssdk->GetSignPackage();
 ?>
