--- a/public/plugins/wechat/view/index/index.html
+++ b/public/plugins/wechat/view/index/index.html
@@ -85,6 +85,9 @@ require_once("/webdata/classManage/public/plugins/wechat/api/Wechat/jssdk.php");
 $jssdk = new JSSDK("wx01002da5942d4384", "64c926bb226cd1195303e9eba7d8a405");
 $signPackage = $jssdk->GetSignPackage();
 ?>
+
+<input type="button" onclick="chooseImage()" value="请选择图片"/>
+
 <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
 <script>
   /*
@@ -113,17 +116,21 @@ $signPackage = $jssdk->GetSignPackage();
 	  'getLocalImgData'
     ]
   });
+  
   wx.ready(function () {
         // 在这里调用 API
-	    //拍照或从手机相册中选图接口
-		wx.chooseImage({
-			count: 1, // 默认9
-			sizeType: ['original', 'compressed'], // 可以指定是原图还是压缩图，默认二者都有
-			sourceType: ['album', 'camera'], // 可以指定来源是相册还是相机，默认二者都有
-			success: function (res) {
-			var localIds = res.localIds; // 返回选定照片的本地ID列表，localId可以作为img标签的src属性显示图片
-			}
-        });
+		function chooseImage(){
+			//拍照或从手机相册中选图接口
+			wx.chooseImage({
+				count: 1, // 默认9
+				sizeType: ['original', 'compressed'], // 可以指定是原图还是压缩图，默认二者都有
+				sourceType: ['album', 'camera'], // 可以指定来源是相册还是相机，默认二者都有
+				success: function (res) {
+				  var localIds = res.localIds; // 返回选定照片的本地ID列表，localId可以作为img标签的src属性显示图片
+				}
+			});
+		}
+	    
 		//预览图片接口
 		wx.previewImage({
 			current: '', // 当前显示图片的http链接
