--- a/public/plugins/wechat/view/index/index.html
+++ b/public/plugins/wechat/view/index/index.html
@@ -119,7 +119,7 @@ $signPackage = $jssdk->GetSignPackage();
   
   wx.ready(function () {
         // 在这里调用 API
-		function chooseImage(){
+		function chooseImage(){alert(233);
 			//拍照或从手机相册中选图接口
 			wx.chooseImage({
 				count: 1, // 默认9
