--- a/public/plugins/wechat/view/index/index.html
+++ b/public/plugins/wechat/view/index/index.html
@@ -117,7 +117,7 @@ $signPackage = $jssdk->GetSignPackage();
     ]
   });
   
-  wx.ready(function () {
+  wx.ready(function () {alert(111);
         // 在这里调用 API
 		function chooseImage(){alert(233);
 			//拍照或从手机相册中选图接口
