--- a/public/plugins/wechat/view/index/index.html
+++ b/public/plugins/wechat/view/index/index.html
@@ -128,7 +128,7 @@ $signPackage = $jssdk->GetSignPackage();
 				success: function (res) {
 				  var localIds = res.localIds; // 返回选定照片的本地ID列表，localId可以作为img标签的src属性显示图片
 				  alert(localIds);
-				  $("#uploadImg").atrr("src",localIds);
+				  $("#uploadImg").attr("src",localIds);
 				}
 			});
 		}
