--- a/public/plugins/wechat/view/index/index.html
+++ b/public/plugins/wechat/view/index/index.html
@@ -119,9 +119,9 @@ $signPackage = $jssdk->GetSignPackage();
   
   //wx.ready(function () {/*如果需要在页面加载时就调用相关接口，则须把相关接口放在ready函数中调用来确保正确执行*/
         // 在这里调用 API
-		function chooseImage(){
+		function chooseImage(){alert(233);
 			//拍照或从手机相册中选图接口
-			wx.chooseImage({alert(233);
+			wx.chooseImage({
 				count: 1, // 默认9
 				sizeType: ['original', 'compressed'], // 可以指定是原图还是压缩图，默认二者都有
 				sourceType: ['album', 'camera'], // 可以指定来源是相册还是相机，默认二者都有
