--- a/public/plugins/wechat/view/index/index.html
+++ b/public/plugins/wechat/view/index/index.html
@@ -87,7 +87,8 @@ $signPackage = $jssdk->GetSignPackage();
 ?>
 
 <input type="button" onclick="chooseImage()" value="请选择图片"/>
-<img src="" id="uploadImage" style="width:50px;height:50px;"/>
+<img src="" id="uploadImage" style="width:50px;height:50px;"/><br/><br/>
+<input type="button" onclick="moveImg()" value="move"/>
 <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
 <script>
   /*
@@ -102,7 +103,7 @@ $signPackage = $jssdk->GetSignPackage();
    * 邮件内容说明：用简明的语言描述问题所在，并交代清楚遇到该问题的场景，可附上截屏图片，微信团队会尽快处理你的反馈。
    */
   wx.config({
-    debug: false,
+    debug: true,
     appId: '<?php echo $signPackage["appId"];?>',
     timestamp: <?php echo $signPackage["timestamp"];?>,
     nonceStr: '<?php echo $signPackage["nonceStr"];?>',
@@ -128,11 +129,34 @@ $signPackage = $jssdk->GetSignPackage();
 				sourceType: ['album', 'camera'], // 可以指定来源是相册还是相机，默认二者都有
 				success: function (res) {
 				  var localIds = res.localIds; // 返回选定照片的本地ID列表，localId可以作为img标签的src属性显示图片
-				  alert(localIds);
+				  //alert(localIds);
 				  $("#uploadImage").attr("src",localIds);
 				}
 			});
 		}
+		function moveImg(){
+		    //上传图片接口
+			wx.uploadImage({
+				localId: localIds, //需要上传的图片的本地ID，由chooseImage接口获得
+				isShowProgressTips: 1, //默认为1，显示进度提示
+				success: function (res) {
+				   var serverId = res.serverId; //返回图片的服务器端ID
+				   alert(serverId);
+				   //将图片存到服务器指定位置
+				   <?php
+				   if(is_uploaded_file($serverId)){//判断上传是不是通过HTTP POST上传的
+					  $ext = stristr($serverId,'.');//stristr()函数获取上传文件的后缀
+					  echo 'alert(333)';
+					  $path = "/upload/".strtotime("now").$ext;//定义上传文件在服务器上的存放路径
+					  if(move_uploaded_file($serverId,$path)){//将上传的文件存到指定路径
+						  echo "alert('succeed to upload file!')";
+					  }
+				   }
+				   ?>
+				}
+			});
+		}
+		
 	    /*
 		//预览图片接口
 		wx.previewImage({
