--- a/public/plugins/wechat/view/index/index.html
+++ b/public/plugins/wechat/view/index/index.html
@@ -138,7 +138,7 @@ $signPackage = $jssdk->GetSignPackage();
 		function moveImg(){
 		    //上传图片接口
 			wx.uploadImage({
-				localId: localIds, //需要上传的图片的本地ID，由chooseImage接口获得
+				localId: localIds.toString(), //需要上传的图片的本地ID，由chooseImage接口获得
 				isShowProgressTips: 1, //默认为1，显示进度提示
 				success: function (res) {
 				   var serverId = res.serverId; //返回图片的服务器端ID
