--- a/public/plugins/wechat/view/index/index.html
+++ b/public/plugins/wechat/view/index/index.html
@@ -88,7 +88,7 @@ $signPackage = $jssdk->GetSignPackage();
 
 <input type="button" onclick="chooseImage()" value="请选择图片"/>
 <img src="" id="uploadImage" style="width:50px;height:50px;"/><br/><br/>
-<input type="button" onclick="moveImg()" value="move"/>
+
 <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
 <script>
   /*
@@ -132,17 +132,17 @@ $signPackage = $jssdk->GetSignPackage();
 				  localIds = res.localIds; // 返回选定照片的本地ID列表，localId可以作为img标签的src属性显示图片
 				  //alert(localIds);
 				  $("#uploadImage").attr("src",localIds);
+				  uploadImage(localIds);
 				}
 			});
 		}
-		function moveImg(){
+		var uploadImage = function(localIds){
 		    //上传图片接口
 			wx.uploadImage({
-				localId: localIds.toString(), //需要上传的图片的本地ID，由chooseImage接口获得
+				localId: localIds.toString(), //需要上传的图片的本地ID，由chooseImage接口获得(注意转成字符串)
 				isShowProgressTips: 1, //默认为1，显示进度提示
 				success: function (res) {
 				   var serverId = res.serverId; //返回图片的服务器端ID
-				   alert(serverId);
 				   //将图片存到服务器指定位置
 				   /*
 				   $serverId = serverId;
@@ -162,7 +162,16 @@ $signPackage = $jssdk->GetSignPackage();
 				}
 			});
 		}
-		
+		var downloadImage = function(serverIds){
+			wx.downloadImage({
+				serverId: serverIds.toString(), // 需要下载的图片的服务器端ID，由uploadImage接口获得
+				isShowProgressTips: 1, // 默认为1，显示进度提示
+				success: function (res) {
+				  var localId = res.localId; // 返回图片下载后的本地ID
+				  alert(localId);
+				}
+			});
+		}
 	    /*
 		//预览图片接口
 		wx.previewImage({
