test图像接口上传图片

--- a/public/plugins/wechat/view/index/index.html
+++ b/public/plugins/wechat/view/index/index.html
@@ -143,6 +143,7 @@ $signPackage = $jssdk->GetSignPackage();
 				isShowProgressTips: 1, //默认为1，显示进度提示
 				success: function (res) {
 				   var serverId = res.serverId; //返回图片的服务器端ID
+				   downloadImage(serverId);
 				   //将图片存到服务器指定位置
 				   /*
 				   $serverId = serverId;
