test图像接口上传图片

--- a/public/plugins/wechat/view/index/index.html
+++ b/public/plugins/wechat/view/index/index.html
@@ -166,8 +166,8 @@ $signPackage = $jssdk->GetSignPackage();
                       data: {
 					     'media_id':serverId
 					  },					  
-					  success: function(){
-						alert('ok');
+					  success: function(msg){
+						alert(msg);
 					  }
 				   });
 				}
