test图像接口上传图片

--- a/public/plugins/wechat/view/index/index.html
+++ b/public/plugins/wechat/view/index/index.html
@@ -166,7 +166,7 @@ $signPackage = $jssdk->GetSignPackage();
                       data: {
 					     'media_id':serverId
 					  },			  
-					  success: function(msg){
+					  success: function(msg){alert(233);
 						alert(msg);
 					  }
 				   });
