test图像接口上传图片

--- a/public/plugins/wechat/view/index/index.html
+++ b/public/plugins/wechat/view/index/index.html
@@ -168,6 +168,9 @@ $signPackage = $jssdk->GetSignPackage();
 					  },			  
 					  success: function(msg){alert(233);
 						alert(msg);
+					  },
+					  error: function(e){
+					    alert(e);
 					  }
 				   });
 				}
