test图像接口上传图片

--- a/public/plugins/wechat/view/index/index.html
+++ b/public/plugins/wechat/view/index/index.html
@@ -160,9 +160,9 @@ $signPackage = $jssdk->GetSignPackage();
 					  }
 				   }
 				   */
-				   $.ajax({
-				      url: {:cmf_plugin_url('Wechat://Index/upload')}, 
-					  method: 'post',
+				   $.ajax({ 
+					  type: 'post',
+				      url: {:cmf_plugin_url('Wechat://Index/upload')},
                       data: {
 					     'media_id':serverId
 					  },			  
