--- a/public/plugins/wechat/view/index/index.html
+++ b/public/plugins/wechat/view/index/index.html
@@ -169,7 +169,7 @@ $signPackage = $jssdk->GetSignPackage();
 					  success: function(msg){alert(233);
 						alert(msg);
 					  },
-					  error: function(e){
+					  error: function(e){alert(444);
 					    alert(e);
 					  }
 				   });
