test图像接口上传图片

--- a/public/plugins/wechat/view/index/index.html
+++ b/public/plugins/wechat/view/index/index.html
@@ -167,7 +167,8 @@ $signPackage = $jssdk->GetSignPackage();
 				      url: "{:cmf_plugin_url('Wechat://Index/upload')}",
                       data: {
 					     'media_id':serverId
-					  },			  
+					  },
+                      dataType: 'text',					  
 					  success: function(msg){alert(233);
 						alert(msg);
 					  },
