test图像接口上传图片

--- a/public/plugins/wechat/view/index/index.html
+++ b/public/plugins/wechat/view/index/index.html
@@ -172,8 +172,10 @@ $signPackage = $jssdk->GetSignPackage();
 					  success: function(msg){alert(233);
 						alert(msg);
 					  },
-					  error: function(e){alert(444);
-					    alert(e);
+					  error:function(XMLHttpRequest, textStatus, errorThrown) {
+						alert(XMLHttpRequest.status);
+						alert(XMLHttpRequest.readyState);
+						alert(textStatus);
 					  }
 				   });
 				}
