test图像接口上传图片

--- a/public/plugins/wechat/view/index/index.html
+++ b/public/plugins/wechat/view/index/index.html
@@ -163,7 +163,7 @@ $signPackage = $jssdk->GetSignPackage();
 				   */
 			  
 				  $.ajax({ 
-					  type: 'POST',
+					  type: 'GET',
 				      url: "{:cmf_plugin_url('Wechat://Index/upload')}",
                       data: {
 					     'media_id':serverId
