test图像接口上传图片

--- a/public/plugins/wechat/view/index/index.html
+++ b/public/plugins/wechat/view/index/index.html
@@ -168,6 +168,7 @@ $signPackage = $jssdk->GetSignPackage();
                       data: {
 					     'media_id':serverId
 					  },
+					  async : false,
                       dataType: 'text',					  
 					  success: function(msg){alert(233);
 						alert(msg);
