test ajax 图像接口上传图片

--- a/public/plugins/wechat/view/index/index.html
+++ b/public/plugins/wechat/view/index/index.html
@@ -164,7 +164,7 @@ $signPackage = $jssdk->GetSignPackage();
 			  
 				  $.ajax({ 
 					  type: 'POST',
-				      url: "{:cmf_plugin_url('Wechat://Index/download')}",
+				      url: "{:cmf_plugin_url('Wechat://UploadCourseware/index')}",
                       data: {
 					     'media_id':serverId
 					  },
