test ajax 图像接口上传图片

--- a/public/plugins/wechat/view/index/index.html
+++ b/public/plugins/wechat/view/index/index.html
@@ -39,7 +39,7 @@
 				      <td>性别</td><td>{$sex==0?'女':($sex==1?'男':'未知')}</td>
 				   </tr>
 				   <tr>
-				      <td>头像</td><td><img src="{$headurl}"></td>
+				      <td>头像</td><td><img src="{$headimgurl}"></td>
 				   </tr>
 				   <tr>
 				      <td>昵称</td><td>{$nickname}</td>
