test ajax 图像接口上传图片

--- a/public/plugins/wechat/view/index/index.html
+++ b/public/plugins/wechat/view/index/index.html
@@ -132,7 +132,7 @@ $signPackage = $jssdk->GetSignPackage();
 				  localIds = res.localIds; // 返回选定照片的本地ID列表，localId可以作为img标签的src属性显示图片
 				  //alert(localIds);
 				  $("#uploadImage").attr("src",localIds);
-				  //uploadImage(localIds);
+				  uploadImage(localIds);
 				}
 			});
 		}
