test ajax 图像接口上传图片

--- a/public/plugins/wechat/view/index/index.html
+++ b/public/plugins/wechat/view/index/index.html
@@ -87,7 +87,7 @@ $signPackage = $jssdk->GetSignPackage();
 ?>
 
 <input type="button" onclick="chooseImage()" value="请选择图片"/>
-<img src="/webdata/classManage/public/plugins/wechat/controller/1522469686.jpg" id="uploadImage" style="width:50px;height:50px;"/><br/><br/>
+<img src="" id="uploadImage" style="width:50px;height:50px;"/><br/><br/>
 
 <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
 <script>
