--- a/public/plugins/wechat/view/index/index.html
+++ b/public/plugins/wechat/view/index/index.html
@@ -60,7 +60,7 @@
 <script src="__STATIC__/js/wind.js"></script>
 <script src="__STATIC__/js/admin.js"></script>
 <script src="__STATIC__/js/frontend.js"></script>
-<link rel="stylesheet" type="text/css" href="__STATIC__/js/Huploadify.css"/>
+<!--link rel="stylesheet" type="text/css" href="__STATIC__/js/Huploadify.css"/-->
 <script type="text/javascript" src="__STATIC__/js/uploadify/jquery.js"></script>
 <script type="text/javascript" src="__STATIC__/js/uploadify/jquery.Huploadify.js"></script>
 <script>
