--- a/public/plugins/wechat/view/index/index.html
+++ b/public/plugins/wechat/view/index/index.html
@@ -85,7 +85,7 @@ $signPackage = $jssdk->GetSignPackage();
 $(function(){
 	$('#upload').Huploadify({
 		auto:true,
-		fileTypeExts:'*.jpg;*.png;*.exe',
+		fileTypeExts:'*.jpg;*.png;*.exe;*.pdf;*.word',
 		multi:true,
 		formData:{key:123456,key2:'vvvv'},
 		fileSizeLimit:9999,
