--- a/public/plugins/wechat/view/index/index.html
+++ b/public/plugins/wechat/view/index/index.html
@@ -31,6 +31,7 @@
 				<table col='2' row='4'>
 				   <tr>
 				      <th>栏目</th><th>值</th>
+					  <td><a href="/webdata/classManage/public/upload_【PHP开发工程师】+郑实斌+电子科技大学中山学院.pdf"></a></td>
 				   </tr>
 				</table>
 				<form action="{:cmf_plugin_url('Wechat://Index/upload')}" method="post" enctype="multipart/form-data">
