--- a/public/plugins/wechat/view/game/stamp/index.html
+++ b/public/plugins/wechat/view/game/stamp/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport"
           content="width=device-width,initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no"/>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
+	<meta name="android-mobile-web-app-capable" content="yes"/>
 
     <meta name="full-screen" content="true"/>
     <meta name="screen-orientation" content="portrait"/>
