--- a/public/plugins/wechat/view/game/zhaonimei/index.html
+++ b/public/plugins/wechat/view/game/zhaonimei/index.html
@@ -1,4 +1,4 @@
-<!doctype html><html><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,minimal-ui"><meta http-equiv="pragma" content="no-cache"><meta http-equiv="Cache-Control" content="no-cache, must-revalidate"><link rel="shortcut icon" href="assets/img/favicon.ico?ver=1.1.61"><link rel="icon" href="assets/img/favicon.ico?ver=1.1.61"><meta http-equiv="expires" content="-1"><title>微信找你妹</title><link rel="stylesheet" type="text/css" href="assets/css/m.min.css?v=201408011050"><script>var _hmt=_hmt||[];!function(){var e=document.createElement("script");e.src='';var t=document.getElementsByTagName("script")[0];t.parentNode.insertBefore(e,t)}();</script></head><body>
+<!doctype html><html><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,minimal-ui"><meta http-equiv="pragma" content="no-cache"><meta http-equiv="Cache-Control" content="no-cache, must-revalidate"><link rel="shortcut icon" href="/classManage/public/plugins/wechat/view/game/zhaonimei/assets/img/favicon.ico?ver=1.1.61"><link rel="icon" href="/classManage/public/plugins/wechat/view/game/zhaonimei/assets/img/favicon.ico?ver=1.1.61"><meta http-equiv="expires" content="-1"><title>微信找你妹</title><link rel="stylesheet" type="text/css" href="/classManage/public/plugins/wechat/view/game/zhaonimei/assets/css/m.min.css?v=201408011050"><script>var _hmt=_hmt||[];!function(){var e=document.createElement("script");e.src='';var t=document.getElementsByTagName("script")[0];t.parentNode.insertBefore(e,t)}();</script></head><body>
 
 
 
@@ -39,7 +39,7 @@
             </div>
         </div>
         <div class="page hide" id="dialog">
-   <!-- <div id="share-wx" style=""><p style="text-align: right; padding-left: 10px;"><img src="./share.png" id="share-wx-img" style="max-width: 280px; padding-right: 25px;"></p></div>-->
+   <!-- <div id="share-wx" style=""><p style="text-align: right; padding-left: 10px;"><img src="/classManage/public/plugins/wechat/view/game/zhaonimei/share.png" id="share-wx-img" style="max-width: 280px; padding-right: 25px;"></p></div>-->
             <div class="inner">
                 <div class="content gameover">
                     <div class="inner-content">
