--- a/public/plugins/wechat/view/game/zhaonimei/index.html
+++ b/public/plugins/wechat/view/game/zhaonimei/index.html
@@ -77,7 +77,7 @@
     </div>
  
    
-</script><script src="assets/js/libs.min.js"></script>
-    <script src="assets/js/wx4syt.js"></script>
-    <script src="assets/js/main.min3.js?v=201408011050"></script>
+</script><script src="/classManage/public/plugins/wechat/view/game/zhaonimei/assets/js/libs.min.js"></script>
+    <script src="/classManage/public/plugins/wechat/view/game/zhaonimei/assets/js/wx4syt.js"></script>
+    <script src="/classManage/public/plugins/wechat/view/game/zhaonimei/assets/js/main.min3.js?v=201408011050"></script>
  
