test upload file

--- a/public/plugins/wechat/view/uploadCourseware/upload.html
+++ b/public/plugins/wechat/view/uploadCourseware/upload.html
@@ -73,9 +73,9 @@
 <?php
 //chdir(dirname(__FILE__));
 
-require_once("/webdata/classManage/public/plugins/wechat/api/Wechat/jssdk.php");
-$jssdk = new JSSDK("wx01002da5942d4384", "64c926bb226cd1195303e9eba7d8a405");
-$signPackage = $jssdk->GetSignPackage();
+//require_once("/webdata/classManage/public/plugins/wechat/api/Wechat/jssdk.php");
+//$jssdk = new JSSDK("wx01002da5942d4384", "64c926bb226cd1195303e9eba7d8a405");
+//$signPackage = $jssdk->GetSignPackage();
 ?>
 
 <input type="button" onclick="chooseImage()" value="请选择图片"/>
